# sistemi_digitali_2024

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  analysis.ipynb
scripts/: ci.sh  profile  rand_data.py  time
src/: CMakeLists.txt  kmeans.hpp  kmeans_buf.cpp  kmeans_cpu.cpp  kmeans_sycl.cpp  kmeans_sycl.hpp  kmeans_usm.cpp  main.cpp  point.hpp
src/buf/: CMakeLists.txt  kmeans_buf.cpp  kmeans_buf.hpp
src/cpu/: CMakeLists.txt  kmeans_cpu.cpp  kmeans_cpu.hpp  kmeans_cpu_v1.cpp  kmeans_cpu_v2.cpp  kmeans_cpu_v3.cpp  kmeans_omp.cpp
src/cuda/: CMakeLists.txt  cuda_utils.cuh  kmeans_cuda.cu  kmeans_cuda.hpp
src/ocv/: CMakeLists.txt  kmeans_ocv.cpp  kmeans_ocv.hpp
src/omp/: CMakeLists.txt  kmeans_omp.cpp  kmeans_omp.hpp
src/simd/: CMakeLists.txt  kmeans_simd.cpp  kmeans_simd.hpp
src/tbb/: CMakeLists.txt  kmeans_tbb.cpp  kmeans_tbb.hpp
src/usm/: CMakeLists.txt  kmeans_usm.cpp  kmeans_usm.hpp  kmeans_usm_v1.cpp  kmeans_usm_v2.cpp  kmeans_usm_v3.cpp  kmeans_usm_v4.cpp  sycl_utils.hpp
test/: test_correctness.cpp  test_devices.cpp  test_results.cpp  util.hpp
