add_library(kmeans INTERFACE kmeans.hpp point.hpp)

add_subdirectory(cpu)
set(BACKENDS kmeans-cpu kmeans-omp)
add_subdirectory(omp)

if (KMEANS_SIMD)
    message(STATUS "Using SIMD backend")
    add_subdirectory(simd)
    list(APPEND BACKENDS kmeans-simd)
endif ()
if (KMEANS_OCV)
    message(STATUS "Using OpenCV backend")
    add_subdirectory(ocv)
    list(APPEND BACKENDS kmeans-ocv)
endif ()
if (KMEANS_USM)
    message(STATUS "Using SYCL USM backend")
    add_subdirectory(usm)
    list(APPEND BACKENDS kmeans-usm)
endif ()
if (KMEANS_BUFFER)
    message(STATUS "Using SYCL buffer backend")
    add_subdirectory(buf)
    list(APPEND BACKENDS kmeans-buf)
endif ()
if (KMEANS_CUDA)
    message(STATUS "Using CUDA backend")
    add_subdirectory(cuda)
    list(APPEND BACKENDS kmeans-cuda)
endif ()
if (KMEANS_TBB)
    message(STATUS "Using TBB backend")
    add_subdirectory(tbb)
    list(APPEND BACKENDS kmeans-tbb)
endif ()

message(STATUS "Backends: ${BACKENDS}")
set(BACKENDS ${BACKENDS} PARENT_SCOPE)
